my-apps/development/gitea/fix-permissions-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  template:
    spec:
